force-app/main/default/objects/ABML_LOA__c/ABML_LOA__c.object-meta.xml
<CustomObject>
    <label>ABML LOA</label>
    <nameField>
        <label>LOA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LOAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>