force-app/main/default/objects/ABML_LOA__c/fields/ABML_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>ABML_Client_Code__c</fullName>
    <externalId>true</externalId>
    <label>Client Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>