force-app/main/default/objects/ABML_LOA__c/fields/ABML_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>ABML_Client_Id__c</fullName>
    <externalId>true</externalId>
    <label>Client ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>