force-app/main/default/objects/ABML_LOA__c/fields/ABML_LOA_AP__c.field-meta.xml
<CustomField>
    <fullName>ABML_LOA_AP__c</fullName>
    <label>LOA AP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>