force-app/main/default/objects/ABML_LOA__c/fields/ABML_LOA_Contact__c.field-meta.xml
<CustomField>
    <fullName>ABML_LOA_Contact__c</fullName>
    <label>LOA Contact</label>
    <type>Phone</type>
</CustomField>