force-app/main/default/objects/ABML_LOA__c/fields/ABML_LOA_Email__c.field-meta.xml
<CustomField>
    <fullName>ABML_LOA_Email__c</fullName>
    <label>LOA Email</label>
    <type>Email</type>
</CustomField>