force-app/main/default/objects/ABML_LOA__c/fields/ABML_LOA_Relation__c.field-meta.xml
<CustomField>
    <fullName>ABML_LOA_Relation__c</fullName>
    <label>LOA Relation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>