force-app/main/default/objects/ABML_LOA__c/fields/LOA_Unique__c.field-meta.xml
<CustomField>
    <fullName>LOA_Unique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>LOA Unique</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>